# templog-arduino

./: Cargo.toml  flash.sh
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
device/: Cargo.toml  README.md  rust-toolchain.toml
device/.cargo/: config.toml
device/src/: main.rs
src/: main.rs
