[package]
name = "templog-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dht11 = { version = "0.3.1", optional = true }
ds323x = { version = "0.5.0", optional = true }

ufmt = "0.1.0"
serde = { version = "1.0.147", features = ["derive"], default-features = false }
chrono = { version = "0.4.23", features = ["serde"], default-features = false }
# rtcc = {  version = "0.3.0" }

[features]
default = ["device"]
device = ["dht11", "ds323x"]